--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8762,7 +8762,7 @@ p.blog-list-desc {
 =========================================================---*/
 .hero-area.home-seven {
     
-    background: url(../images/event/w4.jpeg), yellowgreen;
+    background: url(../images/event/w4.jpeg), #49AE44;
     background-repeat: no-repeat;
     background-size:contain;
     background-position:center;
